# web_search_agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  routes.py  serializers.py  services.py  utils.py
docs/: ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT_CHECKLIST.md  FILE_INDEX.md  FRONTEND_REACT_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README_ARCHITECTURE.md  REFACTORING_SUMMARY.md  START_HERE.md  STREAMING_EVENTS.md
legacy/: README  app_legacy.py
